@@ -4,13 +4,44 @@ VPATH = bin:test:test/results
 all: slow_lisp
 
 slow_lisp-debug: lisp.h lisp.c lisp_cell.c lisp_eval.c lisp_print.c lisp_read.c | bin
-	gcc -ggdb lisp.h lisp.c lisp_cell.c lisp_eval.c lisp_print.c lisp_read.c -o bin/slow_lisp-debug
+	gcc -ggdb \
+	lisp.h \
+	lisp.c \
+	lisp_cell.c \
+	lisp_eval.c \
+	lisp_print.c \
+	lisp_read.c \
+	functions/numerate_number.c \
+	functions/match.c \
+	functions/file_print.c \
+	-o bin/slow_lisp-debug
 
 slow_lisp: lisp.h lisp.c lisp_cell.c lisp_eval.c lisp_print.c lisp_read.c | bin
-	gcc lisp.h lisp.c lisp_cell.c lisp_eval.c lisp_print.c lisp_read.c -o bin/slow_lisp
+	gcc \
+	lisp.h \
+	lisp.c \
+	lisp_cell.c \
+	lisp_eval.c \
+	lisp_print.c \
+	lisp_read.c \
+	functions/numerate_number.c \
+	functions/match.c \
+	functions/file_print.c \
+	-o bin/slow_lisp
 
 coverage-test: lisp.h lisp.c lisp_cell.c lisp_eval.c lisp_print.c lisp_read.c
-	gcc -fprofile-arcs -ftest-coverage lisp.h lisp.c lisp_cell.c lisp_eval.c lisp_print.c lisp_read.c -o bin/coverage-test
+	gcc -fprofile-arcs \
+	-ftest-coverage \
+	lisp.h \
+	lisp.c \
+	lisp_cell.c \
+	lisp_eval.c \
+	lisp_print.c \
+	lisp_read.c \
+	functions/numerate_number.c \
+	functions/match.c \
+	functions/file_print.c \
+	-o bin/coverage-test
 
 # Clean up after ourselves
 .PHONY: clean
