@@ -46,6 +46,7 @@ Changed the behavior of (while #t (expression)) to allow for infinite loops
 Fixed bug in line comments
 Fixed bug in eq? such that it behaves correctly with strings
 Program now behaves correctly when given bad file names
+Fixed broken makefile
 
 ** Removed
 Removed multiple type functions from Slow_lisp binary and into the ascension library
